--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ transform:scale(1) !important;
                                </p>
 	                           <p><img src="BBVA Research_files/Actualizacion_DatosFiscales_Mockup_Paso1.png.img.768.1674315699587.png" width="306" height="630" alt=""/></p>
 	                           <p>&nbsp;</p>
-	                           <p>El proceso se debera gestionar en la llamada.</p>
+	                           <p>El proceso se debera gestionar en la llamada.  <a href="On Boarding _ BBVA Research.html"><img src="BBVA Research_files/maxresdefault.jpg" width="419" height="135" alt=""/></a></p>
 	                        </div>
 	                    </div>
 	                    <div class="partial_filtros">
